[package]
name = "canadian-historical-weather-radar"
version = "0.1.0"
authors = ["Matthew Scheffel <mscheffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33"
indicatif = {version = "0.15", features = ["rayon"]}
rayon = "1.5"
slog = "2.7"
slog-term = "2.6"
slog-async = "2.6"
ureq = { version = "2.0" }